--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello</title>
+    <link rel="stylesheet" href="styles/index.css" />
     <script defer type="module" src="./index.js"></script>
   </head>
-  <body>
-    <h1>Hi</h1>
-  </body>
+  <body></body>
 </html>
